fix lay-out erros on mobile

--- a/src/app/routes/home/home.component.scss
+++ b/src/app/routes/home/home.component.scss
@@ -104,7 +104,7 @@
   position: relative;
   .bg-parallax {
     position: absolute;
-    background-image: url("http://fantasea.vn/wp-content/uploads/2019/02/malaysia.jpg");
+    background-image: url("/assets/images/background-malasia.jpg");
     background-attachment: fixed;
     background-size: cover;
     background-repeat: repeat-y;
